Update: HomeCollectionViewCell 디자인 변경
- 인증당일인 날짜인지 알려주고, 인증하지 못한 경우를 알려주기 위해 디자인 변경

--- a/StickToIt/Application/en.lproj/Localizable.strings
+++ b/StickToIt/Application/en.lproj/Localizable.strings
@@ -83,3 +83,5 @@
 "certifyingErrorMessage" = "Authentication failed. Would you like to try again?";
 "saveImageErrorMessage" = "The picture was not saved. Would you like to save the photo again?";
 "deleteUserErrorMessage" = "You cannot delete your information. Please delete the app and reinstall it!";
+"certificationFailed" = "Certification Failed";
+"addImageTitle" = "add Photo";
